# graphqlstore

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Pipfile  README.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
source/: __init__.py  main.py
source/cli/: README.md  base.py  conexion.py  core.py  main.py
source/cli/conexion/: README_latest.md  __init__.py  comando_conexion.py  main.py
source/cli/database/: __init__.py  adaptador_database.py
source/cli/generators/: __init__.py  base.py  factory.py  generator_db_schema.py  mysql_generator.py  postgresql_generator.py
source/cli/graphql/: __init__.py  configuracion_y_constantes.py  exceptions.py  mysql_generador.py  mysql_migracion.py  parser.py  procesar_relaciones.py  templates.py  transform_schema_graphql.py
source/cli/inicializar/: README.md  __init__.py  comando_inicializar.py  main.py
source/cli/loaders/: conf_json_loader.py  conf_loader.py
source/cli/migracion/: README.md  __init__.py  comando_migracion.py  main.py
source/cli/probar_conexion/: README.md  __init__.py  comando_probar_conexion.py  main.py
source/cli/servidor/: README.md  __init__.py  comando_servidor.py  main.py
tests/: test_main.py
tests/cli/: test_cli.py  test_comando_conexion.py  test_conexion.py  test_main.py
tests/fixtures/: config_json_loader.py  graphql_schemas.py  info_diff_schema.py  info_enums.py  info_fields.py  info_relation.py  info_tables.py  instances_db.py  instances_migration_generator.py
(+41 files in other folders)
